# tracey_mctraceface

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: tracey_mctraceface_deps.cmake
src/include/: CMakeLists.txt
src/include/tracey_mctraceface/: CMakeLists.txt  background_process.hpp  compressed_sink.hpp  config.hpp.in  file_sink.hpp  fxt.bes.xml  fxt_writer.hpp  log.hpp  output_sink.hpp  perf_capabilities.hpp  perf_driver.hpp  perf_event.bes.xml  perf_event.hpp  perf_script_parser.hpp  shorten_symbol.hpp  stack_reconstructor.hpp  stats_sampler.hpp  subprocess.hpp  trace_filter.hpp  trace_server.hpp
src/lib/: CMakeLists.txt  background_process.cpp  compressed_sink.cpp  file_sink.cpp  fxt_writer.cpp  log.cpp  perf_capabilities.cpp  perf_driver.cpp  perf_script_parser.cpp  shorten_symbol.cpp  stack_reconstructor.cpp  stats_sampler.cpp  subprocess.cpp  trace_filter.cpp  trace_server.cpp
test/: CMakeLists.txt
test/feature/: CMakeLists.txt  cli_acceptance_test.cpp
test/sample-targets/matmul/: CMakeLists.txt  matmul.json  matmul_main.cpp  matmul_main.hpp
test/unit/: CMakeLists.txt  background_process_test.cpp  compressed_sink_test.cpp  error_path_test.cpp  file_sink_test.cpp  fxt_record_test.cpp  fxt_writer_test.cpp  perf_capabilities_test.cpp  perf_driver_test.cpp  perf_event_record_test.cpp  perf_script_parser_test.cpp  shorten_symbol_test.cpp  stack_reconstructor_test.cpp  stats_sampler_test.cpp  trace_filter_test.cpp  trace_validation_test.cpp
