tracey_mctraceface_add_test(fxt_record)
target_link_libraries(fxt_record_test PRIVATE fxt_types)

tracey_mctraceface_add_test(fxt_writer)
target_link_libraries(fxt_writer_test PRIVATE tracey_mctraceface::fxt_writer)

tracey_mctraceface_add_test(perf_event_record)
target_link_libraries(perf_event_record_test PRIVATE perf_event_types)

tracey_mctraceface_add_test(perf_script_parser)
target_link_libraries(perf_script_parser_test PRIVATE tracey_mctraceface::perf_script_parser)

tracey_mctraceface_add_test(shorten_symbol)
target_link_libraries(shorten_symbol_test PRIVATE tracey_mctraceface::shorten_symbol)

tracey_mctraceface_add_test(stack_reconstructor)
target_link_libraries(stack_reconstructor_test PRIVATE tracey_mctraceface::stack_reconstructor)

tracey_mctraceface_add_test(file_sink)
target_link_libraries(file_sink_test PRIVATE tracey_mctraceface::file_sink)

tracey_mctraceface_add_test(perf_capabilities)
target_link_libraries(perf_capabilities_test PRIVATE tracey_mctraceface::perf_capabilities)

tracey_mctraceface_add_test(perf_driver)
target_link_libraries(perf_driver_test PRIVATE tracey_mctraceface::perf_driver)

tracey_mctraceface_add_test(background_process)
target_link_libraries(background_process_test PRIVATE tracey_mctraceface::background_process)

tracey_mctraceface_add_test(compressed_sink)
target_link_libraries(compressed_sink_test PRIVATE tracey_mctraceface::compressed_sink)

tracey_mctraceface_add_test(trace_filter)
target_link_libraries(trace_filter_test PRIVATE tracey_mctraceface::trace_filter)

tracey_mctraceface_add_test(error_path)
target_link_libraries(error_path_test PRIVATE
  tracey_mctraceface::fxt_writer
  tracey_mctraceface::compressed_sink
  tracey_mctraceface::subprocess
  tracey_mctraceface::background_process)

tracey_mctraceface_add_test(trace_validation)
target_link_libraries(trace_validation_test PRIVATE
  tracey_mctraceface::stack_reconstructor
  tracey_mctraceface::perf_script_parser)
